Bug 1980795 - Avoid creating DOM elements for buttons that we're not going to show. r=dshin
The scroll arrow styles don't change often enough to be worth optimizing
for, and changes to things like
widget.non-native-theme.gtk.scrollbar.allow-buttons already require a
page refresh to take effect.

This saves two dom elements per scrollbar on Windows 10 and 11.

Differential Revision: https://phabricator.services.mozilla.com/D259687

--- a/layout/style/res/scrollbars.css
+++ b/layout/style/res/scrollbars.css
@@ -204,30 +204,6 @@ scrollcorner {
   cursor: default;
 }
 
-@media (-moz-scrollbar-start-backward: 0) {
-  scrollbarbutton[sbattr="scrollbar-up-top"] {
-    display: none;
-  }
-}
-
-@media (-moz-scrollbar-start-forward: 0) {
-  scrollbarbutton[sbattr="scrollbar-down-top"] {
-    display: none;
-  }
-}
-
-@media (-moz-scrollbar-end-backward: 0) {
-  scrollbarbutton[sbattr="scrollbar-up-bottom"] {
-    display: none;
-  }
-}
-
-@media (-moz-scrollbar-end-forward: 0) {
-  scrollbarbutton[sbattr="scrollbar-down-bottom"] {
-    display: none;
-  }
-}
-
 /* stylelint-disable-next-line media-query-no-invalid */
 @media -moz-pref("layout.testing.scrollbars.always-hidden") {
   scrollbar {
